Fixes #1299 improves contrast for link color

--- a/app/assets/stylesheets/mixins/_variables.scss
+++ b/app/assets/stylesheets/mixins/_variables.scss
@@ -1,8 +1,6 @@
-
-
-// the total width ofthe containers
+// the total width of the containers
 $screen-width: 1200px;
-$screen-padding: 2.5em; //2.5
+$screen-padding: 2.5em;
 $screen-padding-mobile: 2.5%;
 $footer-height: 8rem;
 $footer-height-reduced: 4rem;
@@ -16,10 +14,7 @@ $small-font-size: 0.95em;
 $xsmall-font-size: 0.7em;
 
 // colors
-$blue: #2c99ce;
-$light-blue: #cde4ef;
-// old blue based on Fairnopoly color: $blue: #3a80c2;
-// old light-blue based on Fairnopoly color: $light-blue: #cee0f0;
+$blue: #428ebd;
 $green: #718b46;
 $turquoise-green: #3ac25d;
 $gray:  #909090;
